--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
     "core-js": "2.4.1",
-    "diskdb": "^0.1.17",
     "enhanced-resolve": "3.3.0",
     "font-awesome": "^4.7.0",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.8.0",
     "rxjs": "5.4.3",
+    "tingodb": "^0.5.1",
     "zone.js": "0.8.17"
   },
   "devDependencies": {
